More test & bug fixes